# nebula

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: measure_vccs_warmup.py
src/nebula/: __init__.py  _termui.py  check.py  cli.py  graph.py  index.py  manual.py  picker.py  refs.py  registry.py  session.py  session_select.py  sidecar.py  tags.py
src/nebula/navigator/: __init__.py  __main__.py  app.py  dialogs.py  model.py  osutil.py
tests/: test_graph.py  test_hold.py  test_manual.py  test_manual_destructive.py  test_navigator.py  test_refs.py  test_registry.py  test_session.py  test_session_select.py  test_tags.py
