[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula-archive"
version = "0.1.0"
description = "Provenance and session organization for measurement scripts and data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gui = ["PyQt5>=5.15"]            # legacy session picker (nebula.picker)
navigator = ["PySide6>=6.5"]    # Nebula Navigator GUI (nebula.navigator)
dev = ["pytest>=7.0"]

[project.scripts]
nebula = "nebula.cli:main"

[project.gui-scripts]
nebula-navigator = "nebula.navigator.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nebula.navigator" = ["assets/*.png"]
